--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     },
     "autoload": {
         "psr-4": { 
-            "Addressable\\Bundle\\": "",
-            "Daa\\Addressable\\Bundle\\": ""
+            "Addressable\\Bundle\\": ""
         }
     }
 }
