--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,3 +1,3 @@
 services:
     addressable_bundle.geospatial_helper:
-        class: Addressable\Bundle\Services\GeospatialHelper
+        class: Daa\Addressable\Bundle\Services\GeospatialHelper
